--- a/mapping.tex
+++ b/mapping.tex
@@ -318,7 +318,7 @@ The source device then destroys the router handling this link after receiving a 
 
 \subsubsection{Signal Connection}
 
-Once a router has been created between a source and destination by requesting a link, specific output signals on the source device can be connected to specific input signals on the destination device. For example, once a T-Stick (\verb#/tstick.1#) has been linked to the Granul8 granular synthesizer (\verb#/granul8.1#), the individual signals output by the touch sensors, accelerometers, etc. in the T-Stick can be routed to specific inputs in the granular synthesizer. Without specifying connections between output signals and input signals then gestures performed with the control source device will have no affect on the audio samples produced by the sound generation destination device. 
+Once a router has been created between a source and destination by requesting a link, specific output signals on the source device can be connected to specific input signals on the destination device. For example, once a T-Stick \cite{tstick2007} (\verb#/tstick.1#) has been linked to the Granul8 granular synthesizer (\verb#/granul8.1#) developed at IDMIL, the individual signals output by the touch sensors, accelerometers, etc. in the T-Stick can be routed to specific inputs in the granular synthesizer. Without specifying connections between output signals and input signals then gestures performed with the control source device will have no affect on the audio samples produced by the sound generation destination device. 
 
 In the Mapper Protocol, this is accomplished by sending a message similar to these:
 
