--- a/vijay_thesis.bib
+++ b/vijay_thesis.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Vijay at 2011-08-11 16:58:44 -0400 
+%% Created for Vijay at 2011-08-12 13:19:35 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -12,6 +12,18 @@
 
 @string{icmc2010 = {Proc. of the 2010 International Computer Music Conference. San Francisco, Calif.: International Computer Music Association.}}
 
+
+@article{metainstrument1998,
+	Author = {Serge de Laubier},
+	Date-Added = {2011-08-12 13:07:30 -0400},
+	Date-Modified = {2011-08-12 13:10:13 -0400},
+	Journal = {Computer Music Journal},
+	Month = {Spring},
+	Number = {1},
+	Pages = {25-29},
+	Title = {The Meta-Instrument},
+	Volume = {22},
+	Year = {1998}}
 
 @article{wanderley2004,
 	Author = {Marcelo Mortensen Wanderley and Philippe Depalle},
