--- a/conclusions.tex
+++ b/conclusions.tex
@@ -4,4 +4,4 @@
 
 This concludes the research presented in this thesis. The base impulse behind this whole endevour is the belief that the interface of a system is as important, arguably more important, then the internals of the system. The internals of a system are tasked with maintaining the stability, reliability, and functionality of the system, but the interface of the system to the broader set of external systems, users, and world is ultimately what gives a system purpose. The history of computer science and electrical engineering is largely a history of ignoring the interface or relegating the interface to a mere curiosity, simply the interest of the types of individuals who are too artsy to appreciate "real" computer science. This is true of not only graphical user interfaces, but the interfaces of server-based application programming interfaces, code libraries, object oriented classes, and even the documentation (I admit to this shortcoming) that allows the external world to understand the "protocol" of the interface. The distinction between the \emph{system} and the \emph{interface} is, at its heart, an artifact of the history of computers and the individuals who devoted their lives to the endevour.
 
-Noticably absent in this thesis is any mention of user testing or experimentation to see whether the Vizmapper interface actually accomplishes what is intended. This would certainly be expected of a larger project on this topic and would be helpful to refine the interface in future iterations. However, to steal a phrase, I greet the conventional understanding of the utility of user testing with skepticism. Sometimes an interface should be molded to the user and other times the user should be molded by the interface. That is the nature of compelling non-computational interfaces, it stands to reason that the same would be true of computational interfaces. The type of long term study that would be necessary to observe how interfaces affect the mindset of a user is not something that is often performed. However, I think that such a study would be far more compelling and useful than the typical user testing that is performed.
+Noticably absent in this thesis is any mention of user testing or experimentation to see whether the Vizmapper interface actually accomplishes what is intended. Such testing would certainly be expected of a larger project on this topic and would be helpful to refine the interface in future iterations. However, to steal a phrase, I greet the conventional understanding of the utility of user testing with skepticism. Sometimes an interface should be molded to the user and other times the user should be molded by the interface. That is the nature of compelling non-computational interfaces, it stands to reason that the same would be true of computational interfaces. The type of long term study that would be necessary to observe how interfaces affect the mindset of a user is not something that is often performed. However, I think that such a study would be far more compelling and useful than the typical user testing that is performed.
