--- a/vijay_thesis.tex
+++ b/vijay_thesis.tex
@@ -75,16 +75,19 @@ Even the most mechanically complex acoustic musical instruments, like a piano, a
 
 This problem is exacerbated as the number of sensors that make up the control mechanism in an instrument increases and the interaction of the control mechanism with the sound generation mechanism grows more complex. This relationship between the control mechanism and the sound generation mechanism is referred to here as the "mapping" of the instrument. The mapping for an instrument represents the aspect of an instrument that is usually most configurable because it is defined by software (as opposed to hardware) and also most crucial to the character of the instrument. In the case of a digital musical instrument, being able to easily configure the musical instrument becomes a point of artistic freedom in addition to a point of maintainability.
 
-This thesis builds upon work encompassed in two projects at the Input Devices and Musical Interaction Lab, the Digital Orchestra Project and libmapper, to tackle the problem of building an interface/system for configuring a complex musical system without expert programming skills. The intent is to present a targeted survey of user interface design and data visualization design research through the years to inform the design of a graphical user interface for performing this configuration task.
+This thesis builds upon work encompassed in two projects at the Input Devices and Musical Interaction Lab, the Digital Orchestra Project and Libmapper, to tackle the problem of building an interface/system for configuring a complex musical system without expert programming skills. The intent is to present a targeted survey of user interface design and data visualization design research through the years to inform the design of a graphical user interface for performing this configuration task.
 
 \newpage
 
 \section*{\centering Acknowledgments}
 
-Thesis regulations require that contributions by others in the collection of
- materials and data, the design and construction of apparatus, the performance
- of experiments, the analysis of data, and the preparation of the thesis be
- acknowledged.
+Many thanks to my supervisor, Professor Marcelo M. Wanderley, for his abundance of available time for his students and helping me integrate my personal work with the work of others at the Input Devices and Music Interaction Laboratory (IDMIL).
+
+I am grateful to have been in the presence of all the students and professors of Music Technology at McGill University. Never have I been part of a group of people who were so eager to offer their time to others who needed help, regardless of whether they had something to gain from it. Special thanks to Joseph Malloch and Stephen Sinclair, without whose help and hours of work on the Mapper project I would never have been able to even contemplate this research project.
+
+I would never have made it to this point or survived the Montreal winters if it was not for Vincent Freour, a boundless source of energy who pulled me out into the sunlight even when I was determined to remain in my cave.
+
+Finally, infinite gratitude to my parents Pandu and Padma who have always and will continue to support me, no matter how seemingly useless and lost I may appear through my many journeys.
 
 %========== Tables of contents, figures, tables
 \tableofcontents
